Mantis ChangeLog

2004.xx.xx  -  0.19.0

 * Enh #0000: Generate one email per user. Stage #1 (no send mail optimization).
 * Enh #2200: Add Version to simple bug pages.
 * Enh #3262: CSV export does not export the category column.
 * Enh #3264: CSV export should export the resolution.
 * Enh #3287: Projectname on CSV export.
 * Enh #3300: Add global defaults for priotity and severity of new bugs.
 * Enh #3302: Add global defaults for view state.
 * Enh #3346: CSV extract should output more data, e.g., Date Submitted, other data that would allow better analysis of data trends. 
 * Enh #3620: Redesigned filter interface.
 * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
 * Enh #3662: Provide more config vars to control viewing/downloading/deleting bug attachments.
 * Enh #3688: Add threshold for changing the bug/bugnote view status.
 * Fix #3259: Saving CSV file of bugs containning double quotes causes invalid csv.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3635: status_resolved in email_api should be resolved.
 * Fix #3646: Error in core/obsolete.php.
 * Fix #3691: Parse error in Romanian localisation.
 * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
 * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.
 * New Config: view_handler_threshold (default VIEWER) - threshold needed to view the bug handler (now works for emails only).
 * New Config: view_history_threshold (default VIEWER) - threshold needed to view the bug history (now works for emails only).
 * New Config: view_attachments_threshold (default VIEWER).  Access level needed to view bugs attachments.  View means to see the file names sizes, and timestamps of the attachments.