@@ -1,7 +1,6 @@
 Mantis ChangeLog
 
 2004.xx.xx  -  0.19.0
-
  * Enh #0000: Generate one email per user. Stage #1 (no send mail optimization).
  * Enh #2200: Add Version to simple bug pages.
  * Enh #3262: CSV export does not export the category column.
@@ -14,6 +13,7 @@ Mantis ChangeLog
  * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
  * Enh #3662: Provide more config vars to control viewing/downloading/deleting bug attachments.
  * Enh #3688: Add threshold for changing the bug/bugnote view status.
+ * Enh #3690: Request for directly setting reminders private.
  * Fix #3259: Saving CSV file of bugs containning double quotes causes invalid csv.
  * Fix #3622: Tweak attachment SQL in print bug pages.
  * Fix #3629: Duplicate Error ID.
@@ -30,6 +30,9 @@ Mantis ChangeLog
  * New Config: allow_view_own_attachments (default ON).  Allow users to view attachments uploaded by themselves even if their access level is below view_attachments_threshold.
  * New Config: allow_download_own_attachments (default ON).  Allow users to download attachments uploaded by themselves even if their access level is below download_attachments_threshold.
  * New Config: allow_delete_own_attachments (default OFF).  Allow users to delete attachments uploaded by themselves even if their access level is below delete_attachments_threshold.
+ * New Config: default_bug_view_status (default VS_PUBLIC).  Default view status for bugs.
+ * New Config: default_bugnote_view_status (default VS_PUBLIC).  Default view status for bugnotes.
+ * New Config: default_reminder_view_status (default VS_PUBLIC).  Default view status for reminders.
  * Languages: Updated Czech, Danish, Estonian, Japanese (EUC and SJIS), Serbian and Spanish localisations.
 
 2004.03.??  -  0.18.2a
